Had to remake animations
Started with the UE4 model

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -719,15 +719,25 @@ WBP_Tutorial_03_C="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Lay
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=PhysicsAssetEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
 RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=Niagara
 RecentAssetEditors=BlueprintEditor
@@ -739,22 +749,8 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Pawn/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 OpenAssetsAtExit=/Game/InfinityBladeWeapons/Weapons/Blade/Swords/Blade_BlackWyrmBlade/SK_Blade_BlackWyrmBlade.SK_Blade_BlackWyrmBlade
-OpenAssetsAtExit=/Game/ThirdPerson/WBP/GameUI/WBP_PauseMenu.WBP_PauseMenu
-OpenAssetsAtExit=/Game/ThirdPerson/WBP/GameUI/Tutorial/WBP_Tutorial.WBP_Tutorial
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode
-OpenAssetsAtExit=/Game/ThirdPerson/WBP/GameUI/InGameScreen.InGameScreen
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1910,6 +1906,12 @@ NewLevelDialog.TimeStamp=2024.06.30-15.42.47
 NewLevelDialog.LastCompileMethod=Unknown
 LauncherServices.TimeStamp=2024.06.30-15.42.44
 LauncherServices.LastCompileMethod=Unknown
+MixamoAnimationRetargeting.TimeStamp=2024.11.28-18.31.56
+MixamoAnimationRetargeting.LastCompileMethod=Unknown
+PluginWarden.TimeStamp=2024.06.30-15.42.47
+PluginWarden.LastCompileMethod=Unknown
+PortalProxies.TimeStamp=2024.06.30-15.42.47
+PortalProxies.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
@@ -1944,36 +1946,36 @@ MRUItem7=/Game/SoStylized/Maps/CompleteVol2/Overview
 MRUItem8=/Game/ThirdPerson/Maps/LVL_00_SubLVLs/LVL_00_SL_01
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/ThirdPerson/WBP/GameUI/Tutorial/WBP_Tutorial_03
-MRUItem1=/Game/ThirdPerson/WBP/GameUI/InGameScreen
-MRUItem2=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
-MRUItem3=/Game/ThirdPerson/WBP/GameUI/Tutorial/WBP_Tutorial_02
-MRUItem4=/Game/ThirdPerson/WBP/GameUI/Tutorial/WBP_Tutorial_01
-MRUItem5=/Game/ThirdPerson/WBP/GameUI/Tutorial/WBP_Tutorial
-MRUItem6=/Game/ThirdPerson/WBP/GameUI/WBP_PauseMenu
-MRUItem7=/Game/InfinityBladeWeapons/Weapons/Blade/Swords/Blade_BlackWyrmBlade/SK_Blade_BlackWyrmBlade
-MRUItem8=/Game/ThirdPerson/Blueprints/Pawn/BP_ThirdPersonCharacter
-MRUItem9=/Game/ThirdPerson/WBP/MainMenuUI/Maps/LVL_MainMenu
-MRUItem10=/Game/ThirdPerson/Niagara/NS_BlackHoleEyeFX_01
-MRUItem11=/Game/ThirdPerson/Blueprints/Abilities/AbilityPickUps/BP_InteractOttoPickUp
-MRUItem12=/Game/ThirdPerson/Niagara/NS_Tentacles
-MRUItem13=/Game/ThirdPerson/Niagara/NS_Tentacles_01
-MRUItem14=/Game/ThirdPerson/Niagara/NS_StylizedInkAbilityPickUp
-MRUItem15=/Game/ThirdPerson/Niagara/NS_WaterDeathEffect
-MRUItem16=/Game/ThirdPerson/Blueprints/AI/Allies/Spirits/BP_RunaWaySpirit_40
-MRUItem17=/Game/ThirdPerson/Blueprints/AI/Allies/Spirits/BP_RunaWaySpirit
-MRUItem18=/Game/ThirdPerson/WBP/MainMenuUI/MainMenuScreen
-MRUItem19=/Game/ThirdPerson/WBP/GameUI/WBP_WaveModeHUD
-MRUItem20=/Game/ThirdPerson/Blueprints/Zone/BP_CaptureZone
-MRUItem21=/Game/ThirdPerson/Maps/LVL_00
-MRUItem22=/Game/ThirdPerson/WBP/MainMenuUI/MainMenuHUD
-MRUItem23=/Game/ThirdPerson/WBP/MainMenuUI/MainMenuBar
-MRUItem24=/Game/ThirdPerson/WBP/GameUI/CoolDownIcons/ReloadTimer
-MRUItem25=/Game/ThirdPerson/WBP/GameUI/UpgradeScreens/WBP_UpgradeScreenFireRateandTurretHelper
-MRUItem26=/Game/ThirdPerson/Blueprints/Abilities/AbilityPickUps/BP_InteractChamberIncreaasePickUp
-MRUItem27=/Game/ThirdPerson/Blueprints/Abilities/BP_PlayerWaterballLifeSteal
-MRUItem28=/Game/ThirdPerson/Blueprints/Abilities/BP_PlayerWaterball
-MRUItem29=/Game/ThirdPerson/Blueprints/AI/0BaseVersions/BP_SlowConeSpawningEnemy
+MRUItem0=/Game/ThirdPerson/Oceana/Marmaid_Rig_PhysicsAsset
+MRUItem1=/Game/Characters/Mannequin_UE4/Animations/WalkInCircle_Fwd
+MRUItem2=/Game/Characters/Mannequin_UE4/Animations/Walk_Fwd
+MRUItem3=/Game/Characters/Mannequin_UE4/Animations/Run_Fwd
+MRUItem4=/Game/Characters/Mannequin_UE4/Animations/Punch_Fwd
+MRUItem5=/Game/Characters/Mannequin_UE4/Animations/Kick_Fwd
+MRUItem6=/Game/Characters/Mannequin_UE4/Animations/Jump_Fwd
+MRUItem7=/Game/Characters/Mannequin_UE4/Animations/Idle_Fwd
+MRUItem8=/Game/Characters/Mannequin_UE4/Animations/Fall_Fwd
+MRUItem9=/Game/Characters/Mannequin_UE4/Animations/Death_Fwd
+MRUItem10=/Game/InfinityBladeWeapons/Weapons/Blade/Swords/Blade_BlackWyrmBlade/SK_Blade_BlackWyrmBlade
+MRUItem11=/Game/ThirdPerson/Blueprints/Pawn/BP_ThirdPersonCharacter
+MRUItem12=/Game/ThirdPerson/WBP/GameUI/InGameScreen
+MRUItem13=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
+MRUItem14=/Game/ThirdPerson/WBP/GameUI/Tutorial/WBP_Tutorial
+MRUItem15=/Game/ThirdPerson/WBP/GameUI/WBP_PauseMenu
+MRUItem16=/Game/ThirdPerson/WBP/GameUI/Tutorial/WBP_Tutorial_03
+MRUItem17=/Game/ThirdPerson/WBP/GameUI/Tutorial/WBP_Tutorial_02
+MRUItem18=/Game/ThirdPerson/WBP/GameUI/Tutorial/WBP_Tutorial_01
+MRUItem19=/Game/ThirdPerson/WBP/MainMenuUI/Maps/LVL_MainMenu
+MRUItem20=/Game/ThirdPerson/Niagara/NS_BlackHoleEyeFX_01
+MRUItem21=/Game/ThirdPerson/Blueprints/Abilities/AbilityPickUps/BP_InteractOttoPickUp
+MRUItem22=/Game/ThirdPerson/Niagara/NS_Tentacles
+MRUItem23=/Game/ThirdPerson/Niagara/NS_Tentacles_01
+MRUItem24=/Game/ThirdPerson/Niagara/NS_StylizedInkAbilityPickUp
+MRUItem25=/Game/ThirdPerson/Niagara/NS_WaterDeathEffect
+MRUItem26=/Game/ThirdPerson/Blueprints/AI/Allies/Spirits/BP_RunaWaySpirit_40
+MRUItem27=/Game/ThirdPerson/Blueprints/AI/Allies/Spirits/BP_RunaWaySpirit
+MRUItem28=/Game/ThirdPerson/WBP/MainMenuUI/MainMenuScreen
+MRUItem29=/Game/ThirdPerson/WBP/GameUI/WBP_WaveModeHUD
 
 [DetailCategories]
 InputMappingContext.Mappings=True
@@ -2252,6 +2254,7 @@ TextureImportSettings.VirtualTextures=True
 TextureImportSettings.ImportSettings=True
 UMGEditorProjectSettings.Compiler=True
 UMGEditorProjectSettings.Class Filtering=True
+UMGEditorProjectSettings.Designer=True
 UMGEditorProjectSettings.Designer=True
 UMGEditorProjectSettings.Designer=True
 UMGEditorProjectSettings.Designer=True
@@ -8395,8 +8398,12 @@ FbxImportUI.Animation=True
 /Game/ThirdPerson/WBP/GameUI/Tutorial/WBP_Tutorial_01.WBP_Tutorial_01=1
 /Game/ThirdPerson/WBP/GameUI/Tutorial/WBP_Tutorial_02.WBP_Tutorial_02=1
 /Game/ThirdPerson/WBP/GameUI/Tutorial/WBP_Tutorial_03.WBP_Tutorial_03=1
+/Game/ThirdPerson/Oceana/Marmaid_Rig_PhysicsAsset.Marmaid_Rig_PhysicsAsset=1
+/Game/Characters/Mannequin_UE4/Animations/Walk_Fwd.Walk_Fwd=1
+/Game/Characters/Mannequin_UE4/Animations/WalkInCircle_Fwd.WalkInCircle_Fwd=1
 
 [PluginBrowser]
+InstalledPlugins=MixamoAnimationRetargeting
 InstalledPlugins=WaterPhysics
 InstalledPlugins=WMFCodecs
 
@@ -8925,7 +8932,7 @@ ShaderPlatformQualitySettings=True
 ToolPresetProjectSettings=True
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=FBXImport
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
