--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -715,22 +715,25 @@ WBP_Tutorial_C="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout
 WBP_Tutorial_02_C="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 WBP_Tutorial_01_C="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 WBP_Tutorial_03_C="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
+IKRetargeter="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=PhysicsAssetEditor
 RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
+RecentAssetEditors=IKRetargetEditor
 RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -747,8 +750,6 @@ RecentAssetEditors=Niagara
 RecentAssetEditors=Niagara
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Pawn/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 OpenAssetsAtExit=/Game/InfinityBladeWeapons/Weapons/Blade/Swords/Blade_BlackWyrmBlade/SK_Blade_BlackWyrmBlade.SK_Blade_BlackWyrmBlade
 
@@ -1947,35 +1948,35 @@ MRUItem8=/Game/ThirdPerson/Maps/LVL_00_SubLVLs/LVL_00_SL_01
 
 [AssetEditorSubsystemRecents]
 MRUItem0=/Game/ThirdPerson/Oceana/Marmaid_Rig_PhysicsAsset
-MRUItem1=/Game/Characters/Mannequin_UE4/Animations/WalkInCircle_Fwd
-MRUItem2=/Game/Characters/Mannequin_UE4/Animations/Walk_Fwd
-MRUItem3=/Game/Characters/Mannequin_UE4/Animations/Run_Fwd
-MRUItem4=/Game/Characters/Mannequin_UE4/Animations/Punch_Fwd
-MRUItem5=/Game/Characters/Mannequin_UE4/Animations/Kick_Fwd
-MRUItem6=/Game/Characters/Mannequin_UE4/Animations/Jump_Fwd
-MRUItem7=/Game/Characters/Mannequin_UE4/Animations/Idle_Fwd
-MRUItem8=/Game/Characters/Mannequin_UE4/Animations/Fall_Fwd
-MRUItem9=/Game/Characters/Mannequin_UE4/Animations/Death_Fwd
-MRUItem10=/Game/InfinityBladeWeapons/Weapons/Blade/Swords/Blade_BlackWyrmBlade/SK_Blade_BlackWyrmBlade
-MRUItem11=/Game/ThirdPerson/Blueprints/Pawn/BP_ThirdPersonCharacter
-MRUItem12=/Game/ThirdPerson/WBP/GameUI/InGameScreen
-MRUItem13=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
-MRUItem14=/Game/ThirdPerson/WBP/GameUI/Tutorial/WBP_Tutorial
-MRUItem15=/Game/ThirdPerson/WBP/GameUI/WBP_PauseMenu
-MRUItem16=/Game/ThirdPerson/WBP/GameUI/Tutorial/WBP_Tutorial_03
-MRUItem17=/Game/ThirdPerson/WBP/GameUI/Tutorial/WBP_Tutorial_02
-MRUItem18=/Game/ThirdPerson/WBP/GameUI/Tutorial/WBP_Tutorial_01
-MRUItem19=/Game/ThirdPerson/WBP/MainMenuUI/Maps/LVL_MainMenu
-MRUItem20=/Game/ThirdPerson/Niagara/NS_BlackHoleEyeFX_01
-MRUItem21=/Game/ThirdPerson/Blueprints/Abilities/AbilityPickUps/BP_InteractOttoPickUp
-MRUItem22=/Game/ThirdPerson/Niagara/NS_Tentacles
-MRUItem23=/Game/ThirdPerson/Niagara/NS_Tentacles_01
-MRUItem24=/Game/ThirdPerson/Niagara/NS_StylizedInkAbilityPickUp
-MRUItem25=/Game/ThirdPerson/Niagara/NS_WaterDeathEffect
-MRUItem26=/Game/ThirdPerson/Blueprints/AI/Allies/Spirits/BP_RunaWaySpirit_40
-MRUItem27=/Game/ThirdPerson/Blueprints/AI/Allies/Spirits/BP_RunaWaySpirit
-MRUItem28=/Game/ThirdPerson/WBP/MainMenuUI/MainMenuScreen
-MRUItem29=/Game/ThirdPerson/WBP/GameUI/WBP_WaveModeHUD
+MRUItem1=/Game/ThirdPerson/Oceana/Animations/Death_Fwd
+MRUItem2=/Game/ThirdPerson/Oceana/RTG_Mannequin_Marmaid_Rig
+MRUItem3=/Game/InfinityBladeWeapons/Weapons/Blade/Swords/Blade_BlackWyrmBlade/SK_Blade_BlackWyrmBlade
+MRUItem4=/Game/ThirdPerson/Blueprints/Pawn/BP_ThirdPersonCharacter
+MRUItem5=/Game/Characters/Mannequin_UE4/Animations/WalkInCircle_Fwd
+MRUItem6=/Game/Characters/Mannequin_UE4/Animations/Walk_Fwd
+MRUItem7=/Game/Characters/Mannequin_UE4/Animations/Run_Fwd
+MRUItem8=/Game/Characters/Mannequin_UE4/Animations/Punch_Fwd
+MRUItem9=/Game/Characters/Mannequin_UE4/Animations/Kick_Fwd
+MRUItem10=/Game/Characters/Mannequin_UE4/Animations/Jump_Fwd
+MRUItem11=/Game/Characters/Mannequin_UE4/Animations/Idle_Fwd
+MRUItem12=/Game/Characters/Mannequin_UE4/Animations/Fall_Fwd
+MRUItem13=/Game/Characters/Mannequin_UE4/Animations/Death_Fwd
+MRUItem14=/Game/ThirdPerson/WBP/GameUI/InGameScreen
+MRUItem15=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
+MRUItem16=/Game/ThirdPerson/WBP/GameUI/Tutorial/WBP_Tutorial
+MRUItem17=/Game/ThirdPerson/WBP/GameUI/WBP_PauseMenu
+MRUItem18=/Game/ThirdPerson/WBP/GameUI/Tutorial/WBP_Tutorial_03
+MRUItem19=/Game/ThirdPerson/WBP/GameUI/Tutorial/WBP_Tutorial_02
+MRUItem20=/Game/ThirdPerson/WBP/GameUI/Tutorial/WBP_Tutorial_01
+MRUItem21=/Game/ThirdPerson/WBP/MainMenuUI/Maps/LVL_MainMenu
+MRUItem22=/Game/ThirdPerson/Niagara/NS_BlackHoleEyeFX_01
+MRUItem23=/Game/ThirdPerson/Blueprints/Abilities/AbilityPickUps/BP_InteractOttoPickUp
+MRUItem24=/Game/ThirdPerson/Niagara/NS_Tentacles
+MRUItem25=/Game/ThirdPerson/Niagara/NS_Tentacles_01
+MRUItem26=/Game/ThirdPerson/Niagara/NS_StylizedInkAbilityPickUp
+MRUItem27=/Game/ThirdPerson/Niagara/NS_WaterDeathEffect
+MRUItem28=/Game/ThirdPerson/Blueprints/AI/Allies/Spirits/BP_RunaWaySpirit_40
+MRUItem29=/Game/ThirdPerson/Blueprints/AI/Allies/Spirits/BP_RunaWaySpirit
 
 [DetailCategories]
 InputMappingContext.Mappings=True
@@ -8115,6 +8116,10 @@ WBP_Tutorial_03_C.Accessibility=True
 WBP_Tutorial_03_C.Rendering=True
 WBP_Tutorial_03_C.Navigation=True
 FbxImportUI.Animation=True
+IKRetargeter.Source=True
+IKRetargeter.Target=True
+IKRetargeter.PreviewSettings=True
+IKRetargeter.DebugSettings=True
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPerson/Input/IMC_Default.IMC_Default=0
@@ -8401,6 +8406,8 @@ FbxImportUI.Animation=True
 /Game/ThirdPerson/Oceana/Marmaid_Rig_PhysicsAsset.Marmaid_Rig_PhysicsAsset=1
 /Game/Characters/Mannequin_UE4/Animations/Walk_Fwd.Walk_Fwd=1
 /Game/Characters/Mannequin_UE4/Animations/WalkInCircle_Fwd.WalkInCircle_Fwd=1
+/Game/ThirdPerson/Oceana/Animations/Death_Fwd.Death_Fwd=1
+/Game/ThirdPerson/Oceana/RTG_Mannequin_Marmaid_Rig.RTG_Mannequin_Marmaid_Rig=1
 
 [PluginBrowser]
 InstalledPlugins=MixamoAnimationRetargeting
@@ -8964,6 +8971,7 @@ AssetEditorOptions=(Context="SkeletalMeshEditor",ViewportConfigs[0]=(ViewModeInd
 AssetEditorOptions=(Context="AnimationEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
 AssetEditorOptions=(Context="AnimationBlueprintEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
 AssetEditorOptions=(Context="PhysicsAssetEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="IKRetargetEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
 CurveEditorSnapInterval=0.010000
 TimelineScrubSnapValue=1000
 TimelineDisplayFormat=Frames
@@ -9012,6 +9020,7 @@ Contexts=(Name="SkeletonEditor.Viewport0",Commands=)
 Contexts=(Name="SkeletonEditor",Commands=)
 Contexts=(Name="PhysicsAssetEditor.Viewport0",Commands=)
 Contexts=(Name="PhysicsAssetEditor",Commands=)
+Contexts=(Name="IKRetargetEditor.Viewport0",Commands=)
 
 [WidgetTemplatesExpanded]
 Audio=False
