Set up the blendspace 1d

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -166,7 +166,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 CurrentPosGridSize=0
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/ThirdPerson/Oceana
+ContentBrowserTab1.SelectedPaths=/Game/ThirdPerson/Oceana/Animations
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.FavoritesAreaExpanded=False
 ContentBrowserTab1.PathAreaExpanded=True
@@ -720,11 +720,12 @@ IKRetargeter="\"Object\" "
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=SkeletalMeshEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=PhysicsAssetEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=IKRetargetEditor
-RecentAssetEditors=SkeletalMeshEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
@@ -749,9 +750,9 @@ RecentAssetEditors=Niagara
 RecentAssetEditors=Niagara
 RecentAssetEditors=Niagara
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Pawn/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 OpenAssetsAtExit=/Game/InfinityBladeWeapons/Weapons/Blade/Swords/Blade_BlackWyrmBlade/SK_Blade_BlackWyrmBlade.SK_Blade_BlackWyrmBlade
+OpenAssetsAtExit=/Game/ThirdPerson/Oceana/Animations/BD_Locomotion.BD_Locomotion
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1947,36 +1948,36 @@ MRUItem7=/Game/SoStylized/Maps/CompleteVol2/Overview
 MRUItem8=/Game/ThirdPerson/Maps/LVL_00_SubLVLs/LVL_00_SL_01
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/ThirdPerson/Oceana/Marmaid_Rig_PhysicsAsset
-MRUItem1=/Game/ThirdPerson/Oceana/Animations/Death_Fwd
-MRUItem2=/Game/ThirdPerson/Oceana/RTG_Mannequin_Marmaid_Rig
-MRUItem3=/Game/InfinityBladeWeapons/Weapons/Blade/Swords/Blade_BlackWyrmBlade/SK_Blade_BlackWyrmBlade
-MRUItem4=/Game/ThirdPerson/Blueprints/Pawn/BP_ThirdPersonCharacter
-MRUItem5=/Game/Characters/Mannequin_UE4/Animations/WalkInCircle_Fwd
-MRUItem6=/Game/Characters/Mannequin_UE4/Animations/Walk_Fwd
-MRUItem7=/Game/Characters/Mannequin_UE4/Animations/Run_Fwd
-MRUItem8=/Game/Characters/Mannequin_UE4/Animations/Punch_Fwd
-MRUItem9=/Game/Characters/Mannequin_UE4/Animations/Kick_Fwd
-MRUItem10=/Game/Characters/Mannequin_UE4/Animations/Jump_Fwd
-MRUItem11=/Game/Characters/Mannequin_UE4/Animations/Idle_Fwd
-MRUItem12=/Game/Characters/Mannequin_UE4/Animations/Fall_Fwd
-MRUItem13=/Game/Characters/Mannequin_UE4/Animations/Death_Fwd
-MRUItem14=/Game/ThirdPerson/WBP/GameUI/InGameScreen
-MRUItem15=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
-MRUItem16=/Game/ThirdPerson/WBP/GameUI/Tutorial/WBP_Tutorial
-MRUItem17=/Game/ThirdPerson/WBP/GameUI/WBP_PauseMenu
-MRUItem18=/Game/ThirdPerson/WBP/GameUI/Tutorial/WBP_Tutorial_03
-MRUItem19=/Game/ThirdPerson/WBP/GameUI/Tutorial/WBP_Tutorial_02
-MRUItem20=/Game/ThirdPerson/WBP/GameUI/Tutorial/WBP_Tutorial_01
-MRUItem21=/Game/ThirdPerson/WBP/MainMenuUI/Maps/LVL_MainMenu
-MRUItem22=/Game/ThirdPerson/Niagara/NS_BlackHoleEyeFX_01
-MRUItem23=/Game/ThirdPerson/Blueprints/Abilities/AbilityPickUps/BP_InteractOttoPickUp
-MRUItem24=/Game/ThirdPerson/Niagara/NS_Tentacles
-MRUItem25=/Game/ThirdPerson/Niagara/NS_Tentacles_01
-MRUItem26=/Game/ThirdPerson/Niagara/NS_StylizedInkAbilityPickUp
-MRUItem27=/Game/ThirdPerson/Niagara/NS_WaterDeathEffect
-MRUItem28=/Game/ThirdPerson/Blueprints/AI/Allies/Spirits/BP_RunaWaySpirit_40
-MRUItem29=/Game/ThirdPerson/Blueprints/AI/Allies/Spirits/BP_RunaWaySpirit
+MRUItem0=/Game/ThirdPerson/Oceana/Animations/BD_Locomotion
+MRUItem1=/Game/InfinityBladeWeapons/Weapons/Blade/Swords/Blade_BlackWyrmBlade/SK_Blade_BlackWyrmBlade
+MRUItem2=/Game/ThirdPerson/Blueprints/Pawn/BP_ThirdPersonCharacter
+MRUItem3=/Game/ThirdPerson/Oceana/Marmaid_Rig_PhysicsAsset
+MRUItem4=/Game/ThirdPerson/Oceana/Animations/Death_Fwd
+MRUItem5=/Game/ThirdPerson/Oceana/RTG_Mannequin_Marmaid_Rig
+MRUItem6=/Game/Characters/Mannequin_UE4/Animations/WalkInCircle_Fwd
+MRUItem7=/Game/Characters/Mannequin_UE4/Animations/Walk_Fwd
+MRUItem8=/Game/Characters/Mannequin_UE4/Animations/Run_Fwd
+MRUItem9=/Game/Characters/Mannequin_UE4/Animations/Punch_Fwd
+MRUItem10=/Game/Characters/Mannequin_UE4/Animations/Kick_Fwd
+MRUItem11=/Game/Characters/Mannequin_UE4/Animations/Jump_Fwd
+MRUItem12=/Game/Characters/Mannequin_UE4/Animations/Idle_Fwd
+MRUItem13=/Game/Characters/Mannequin_UE4/Animations/Fall_Fwd
+MRUItem14=/Game/Characters/Mannequin_UE4/Animations/Death_Fwd
+MRUItem15=/Game/ThirdPerson/WBP/GameUI/InGameScreen
+MRUItem16=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
+MRUItem17=/Game/ThirdPerson/WBP/GameUI/Tutorial/WBP_Tutorial
+MRUItem18=/Game/ThirdPerson/WBP/GameUI/WBP_PauseMenu
+MRUItem19=/Game/ThirdPerson/WBP/GameUI/Tutorial/WBP_Tutorial_03
+MRUItem20=/Game/ThirdPerson/WBP/GameUI/Tutorial/WBP_Tutorial_02
+MRUItem21=/Game/ThirdPerson/WBP/GameUI/Tutorial/WBP_Tutorial_01
+MRUItem22=/Game/ThirdPerson/WBP/MainMenuUI/Maps/LVL_MainMenu
+MRUItem23=/Game/ThirdPerson/Niagara/NS_BlackHoleEyeFX_01
+MRUItem24=/Game/ThirdPerson/Blueprints/Abilities/AbilityPickUps/BP_InteractOttoPickUp
+MRUItem25=/Game/ThirdPerson/Niagara/NS_Tentacles
+MRUItem26=/Game/ThirdPerson/Niagara/NS_Tentacles_01
+MRUItem27=/Game/ThirdPerson/Niagara/NS_StylizedInkAbilityPickUp
+MRUItem28=/Game/ThirdPerson/Niagara/NS_WaterDeathEffect
+MRUItem29=/Game/ThirdPerson/Blueprints/AI/Allies/Spirits/BP_RunaWaySpirit_40
 
 [DetailCategories]
 InputMappingContext.Mappings=True
@@ -8408,6 +8409,9 @@ IKRetargeter.DebugSettings=True
 /Game/Characters/Mannequin_UE4/Animations/WalkInCircle_Fwd.WalkInCircle_Fwd=1
 /Game/ThirdPerson/Oceana/Animations/Death_Fwd.Death_Fwd=1
 /Game/ThirdPerson/Oceana/RTG_Mannequin_Marmaid_Rig.RTG_Mannequin_Marmaid_Rig=1
+/Game/ThirdPerson/Oceana/Animations/BS_Oceana.BS_Oceana=1
+/Game/ThirdPerson/Oceana/Animations/BS_Locomotion.BS_Locomotion=1
+/Game/ThirdPerson/Oceana/Animations/BD_Locomotion.BD_Locomotion=1
 
 [PluginBrowser]
 InstalledPlugins=MixamoAnimationRetargeting
@@ -8789,6 +8793,7 @@ BP_InteractChamberIncreaasePickUp_C=WaterBodyOcean.Collision.Collision,WidgetCom
 Vector3f=
 NiagaraSystem=WaterBodyOcean.Collision.Collision,WidgetComponent.Materials.MaterialList,BP_ThirdPersonCharacter_C.Collision.Collision,BP_ConeEnemy_C.Physics.ConstraintsGroup,BP_ConeEnemy_C.Collision.Collision,BP_ConeBasicEnemy_C.Physics.ConstraintsGroup,BP_ShootingConeEnemy_C.Physics.ConstraintsGroup,BP_ShootingConeEnemy_Insane_C.Physics.ConstraintsGroup,BP_ShootingConeEnemy_Insane_C.TransformCommon.Transform,BP_RunaWaySpirit_C.Collision.Collision,BoxComponent.TransformCommon.Transform,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Materials.MaterialList,StaticMeshComponent.Collision.Collision,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.WeightedIndices,K2Node_VariableGet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.FootStepSFXArray,K2Node_VariableGet.DefaultValueCategory.PlayerHurtSoundArray,K2Node_VariableGet.DefaultValueCategory.PopSFXArray_0,K2Node_VariableGet.DefaultValueCategory.GrappleHitSFXArray,K2Node_VariableGet.DefaultValueCategory.AttackSpellSFXArray,K2Node_VariableGet.DefaultValueCategory.AttackSpellSFXArray_02,K2Node_VariableGet.DefaultValueCategory.SpawnSFXArray,K2Node_VariableGet.DefaultValueCategory.SpiritSFXArray,K2Node_VariableGet.DefaultValueCategory.SpiritPool,K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_VariableGet.DefaultValueCategory.ZonePool,K2Node_VariableGet.DefaultValueCategory.EnemyPool,K2Node_VariableSet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.ProjectileUpgradeStruct,K2Node_VariableSet.DefaultValueCategory.EnemyPool,K2Node_VariableSet.DefaultValueCategory.SpiritPool,K2Node_VariableSet.DefaultValueCategory.ZonePool,K2Node_CustomEvent.Inputs.1C11B20F45A6C7019D54588BC1BCEAF6,K2Node_FunctionEntry.Inputs.29EB62D145C5A2A6E42E2C878468CB1B,PropertyWrapper.DefaultValueCategory.UpgradeScreensArray,PropertyWrapper.DefaultValueCategory.ProjectileUpgradeStruct,PropertyWrapper.DefaultValueCategory.PopSFXArray_0,PropertyWrapper.DefaultValueCategory.EnemyPool,PropertyWrapper.DefaultValueCategory.GrappleHitSFXArray,PropertyWrapper.DefaultValueCategory.AttackSpellSFXArray,PropertyWrapper.DefaultValueCategory.AttackSpellSFXArray_02,PropertyWrapper.DefaultValueCategory.SpawnSFXArray,PropertyWrapper.DefaultValueCategory.ZonePool,PostProcessComponent.PostProcessVolume.Lens,CapsuleComponent.Collision.Collision,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Android,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_IOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Linux,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_LinuxArm64,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Mac,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_TVOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Windows,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.UseHealthPickUps,InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.CursorX_R,InputSettings.Bindings.AxisMappings.CursorY_D,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_LinuxArm64,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_TVOS,InputSettings.Platforms.InputPlatformSettings_Windows,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice,GameMapsSettings.DefaultModes.SelectedGameModeDetails
 WBP_Tutorial_C=WaterBodyOcean.Collision.Collision,WidgetComponent.Materials.MaterialList,BP_ThirdPersonCharacter_C.Collision.Collision,BP_ConeEnemy_C.Physics.ConstraintsGroup,BP_ConeEnemy_C.Collision.Collision,BP_ConeBasicEnemy_C.Physics.ConstraintsGroup,BP_ShootingConeEnemy_C.Physics.ConstraintsGroup,BP_ShootingConeEnemy_Insane_C.Physics.ConstraintsGroup,BP_ShootingConeEnemy_Insane_C.TransformCommon.Transform,BP_RunaWaySpirit_C.Collision.Collision,BoxComponent.TransformCommon.Transform,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Materials.MaterialList,StaticMeshComponent.Collision.Collision,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.WeightedIndices,K2Node_VariableGet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.FootStepSFXArray,K2Node_VariableGet.DefaultValueCategory.PlayerHurtSoundArray,K2Node_VariableGet.DefaultValueCategory.PopSFXArray_0,K2Node_VariableGet.DefaultValueCategory.GrappleHitSFXArray,K2Node_VariableGet.DefaultValueCategory.AttackSpellSFXArray,K2Node_VariableGet.DefaultValueCategory.AttackSpellSFXArray_02,K2Node_VariableGet.DefaultValueCategory.SpawnSFXArray,K2Node_VariableGet.DefaultValueCategory.SpiritSFXArray,K2Node_VariableGet.DefaultValueCategory.SpiritPool,K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_VariableGet.DefaultValueCategory.ZonePool,K2Node_VariableGet.DefaultValueCategory.EnemyPool,K2Node_VariableSet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.ProjectileUpgradeStruct,K2Node_VariableSet.DefaultValueCategory.EnemyPool,K2Node_VariableSet.DefaultValueCategory.SpiritPool,K2Node_VariableSet.DefaultValueCategory.ZonePool,K2Node_CustomEvent.Inputs.1C11B20F45A6C7019D54588BC1BCEAF6,K2Node_FunctionEntry.Inputs.29EB62D145C5A2A6E42E2C878468CB1B,PropertyWrapper.DefaultValueCategory.UpgradeScreensArray,PropertyWrapper.DefaultValueCategory.ProjectileUpgradeStruct,PropertyWrapper.DefaultValueCategory.PopSFXArray_0,PropertyWrapper.DefaultValueCategory.EnemyPool,PropertyWrapper.DefaultValueCategory.GrappleHitSFXArray,PropertyWrapper.DefaultValueCategory.AttackSpellSFXArray,PropertyWrapper.DefaultValueCategory.AttackSpellSFXArray_02,PropertyWrapper.DefaultValueCategory.SpawnSFXArray,PropertyWrapper.DefaultValueCategory.ZonePool,PostProcessComponent.PostProcessVolume.Lens,CapsuleComponent.Collision.Collision,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Android,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_IOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Linux,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_LinuxArm64,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Mac,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_TVOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Windows,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.UseHealthPickUps,InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.CursorX_R,InputSettings.Bindings.AxisMappings.CursorY_D,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_LinuxArm64,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_TVOS,InputSettings.Platforms.InputPlatformSettings_Windows,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice,GameMapsSettings.DefaultModes.SelectedGameModeDetails
+BlendSpace1D=BlendSpace1D.Axis Settings.Horizontal Axis,BlendSpace1D.BlendSamples.BlendSamples_Samples
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
