--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -243,7 +243,7 @@ LastLevel=/Game/ThirdPerson/Maps/LVL_00
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" \"Object.SkeletalMeshes\" "
+Object="\"Object\" "
 InputMappingContext="\"Object\" \"Object.Mappings.Mappings.Mappings[16]\" \"Object.Mappings.Mappings.Mappings[17]\" \"Object.Mappings.Mappings.Mappings[18]\" \"Object.Mappings.Mappings.Mappings[19]\" \"Object.Mappings.Mappings.Mappings[20]\" \"Object.Mappings.Mappings.Mappings[21]\" \"Object.Mappings.Mappings.Mappings[22]\" \"Object.Mappings.Mappings.Mappings[23]\" \"Object.Mappings.Mappings.Mappings[24]\" \"Object.Mappings.Mappings.Mappings[25]\" "
 DataAsset="\"Object\" \"Object.SkeletalMeshes\" "
 InputAction="\"Object\" "
@@ -255,7 +255,7 @@ SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
 K2Node_InputAction="\"Object\" "
 K2Node="\"Object\" "
-EdGraphNode="\"Object\" \"Object.Comment.CommentColor\" "
+EdGraphNode="\"Object\" "
 GeneralProjectSettings="\"Object\" "
 CryptoKeysSettings="\"Object\" "
 GameplayTagsSettings="\"Object\" "
@@ -716,16 +716,23 @@ WBP_Tutorial_02_C="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Lay
 WBP_Tutorial_01_C="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 WBP_Tutorial_03_C="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 IKRetargeter="\"Object\" "
+ABP_Oceana_C="\"Object\" "
+AnimGraphNode_BlendSpacePlayer="\"Object\" "
+AnimGraphNode_BlendSpaceBase="\"Object\" "
+AnimGraphNode_AssetPlayerBase="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=AnimationEditor
+RecentAssetEditors=IKRetargetEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationBlueprintEditor
+RecentAssetEditors=PhysicsAssetEditor
 RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=PhysicsAssetEditor
 RecentAssetEditors=AnimationEditor
-RecentAssetEditors=IKRetargetEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
@@ -747,12 +754,13 @@ RecentAssetEditors=Niagara
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=Niagara
 RecentAssetEditors=Niagara
-RecentAssetEditors=Niagara
-RecentAssetEditors=Niagara
-RecentAssetEditors=BlueprintEditor
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Pawn/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 OpenAssetsAtExit=/Game/InfinityBladeWeapons/Weapons/Blade/Swords/Blade_BlackWyrmBlade/SK_Blade_BlackWyrmBlade.SK_Blade_BlackWyrmBlade
 OpenAssetsAtExit=/Game/ThirdPerson/Oceana/Animations/BD_Locomotion.BD_Locomotion
+OpenAssetsAtExit=/Game/ThirdPerson/Oceana/Marmaid_Rig_PhysicsAsset.Marmaid_Rig_PhysicsAsset
+OpenAssetsAtExit=/Game/ThirdPerson/Oceana/Animations/ABP_Oceana.ABP_Oceana
+OpenAssetsAtExit=/Game/Characters/Mannequin_UE4/Animations/RunInPlace_Fwd.RunInPlace_Fwd
+OpenAssetsAtExit=/Game/ThirdPerson/Oceana/RTG_Mannequin_Marmaid_Rig.RTG_Mannequin_Marmaid_Rig
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1949,35 +1957,35 @@ MRUItem8=/Game/ThirdPerson/Maps/LVL_00_SubLVLs/LVL_00_SL_01
 
 [AssetEditorSubsystemRecents]
 MRUItem0=/Game/ThirdPerson/Oceana/Animations/BD_Locomotion
-MRUItem1=/Game/InfinityBladeWeapons/Weapons/Blade/Swords/Blade_BlackWyrmBlade/SK_Blade_BlackWyrmBlade
-MRUItem2=/Game/ThirdPerson/Blueprints/Pawn/BP_ThirdPersonCharacter
-MRUItem3=/Game/ThirdPerson/Oceana/Marmaid_Rig_PhysicsAsset
-MRUItem4=/Game/ThirdPerson/Oceana/Animations/Death_Fwd
-MRUItem5=/Game/ThirdPerson/Oceana/RTG_Mannequin_Marmaid_Rig
-MRUItem6=/Game/Characters/Mannequin_UE4/Animations/WalkInCircle_Fwd
-MRUItem7=/Game/Characters/Mannequin_UE4/Animations/Walk_Fwd
-MRUItem8=/Game/Characters/Mannequin_UE4/Animations/Run_Fwd
-MRUItem9=/Game/Characters/Mannequin_UE4/Animations/Punch_Fwd
-MRUItem10=/Game/Characters/Mannequin_UE4/Animations/Kick_Fwd
-MRUItem11=/Game/Characters/Mannequin_UE4/Animations/Jump_Fwd
-MRUItem12=/Game/Characters/Mannequin_UE4/Animations/Idle_Fwd
-MRUItem13=/Game/Characters/Mannequin_UE4/Animations/Fall_Fwd
-MRUItem14=/Game/Characters/Mannequin_UE4/Animations/Death_Fwd
-MRUItem15=/Game/ThirdPerson/WBP/GameUI/InGameScreen
-MRUItem16=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
-MRUItem17=/Game/ThirdPerson/WBP/GameUI/Tutorial/WBP_Tutorial
-MRUItem18=/Game/ThirdPerson/WBP/GameUI/WBP_PauseMenu
-MRUItem19=/Game/ThirdPerson/WBP/GameUI/Tutorial/WBP_Tutorial_03
-MRUItem20=/Game/ThirdPerson/WBP/GameUI/Tutorial/WBP_Tutorial_02
-MRUItem21=/Game/ThirdPerson/WBP/GameUI/Tutorial/WBP_Tutorial_01
-MRUItem22=/Game/ThirdPerson/WBP/MainMenuUI/Maps/LVL_MainMenu
-MRUItem23=/Game/ThirdPerson/Niagara/NS_BlackHoleEyeFX_01
-MRUItem24=/Game/ThirdPerson/Blueprints/Abilities/AbilityPickUps/BP_InteractOttoPickUp
-MRUItem25=/Game/ThirdPerson/Niagara/NS_Tentacles
-MRUItem26=/Game/ThirdPerson/Niagara/NS_Tentacles_01
-MRUItem27=/Game/ThirdPerson/Niagara/NS_StylizedInkAbilityPickUp
-MRUItem28=/Game/ThirdPerson/Niagara/NS_WaterDeathEffect
-MRUItem29=/Game/ThirdPerson/Blueprints/AI/Allies/Spirits/BP_RunaWaySpirit_40
+MRUItem1=/Game/ThirdPerson/Oceana/RTG_Mannequin_Marmaid_Rig
+MRUItem2=/Game/Characters/Mannequin_UE4/Animations/RunInPlace_Fwd
+MRUItem3=/Game/ThirdPerson/Oceana/Animations/Run_Fwd
+MRUItem4=/Game/ThirdPerson/Oceana/Animations/ABP_Oceana
+MRUItem5=/Game/ThirdPerson/Oceana/Marmaid_Rig_PhysicsAsset
+MRUItem6=/Game/InfinityBladeWeapons/Weapons/Blade/Swords/Blade_BlackWyrmBlade/SK_Blade_BlackWyrmBlade
+MRUItem7=/Game/ThirdPerson/Blueprints/Pawn/BP_ThirdPersonCharacter
+MRUItem8=/Game/ThirdPerson/Oceana/Animations/Death_Fwd
+MRUItem9=/Game/Characters/Mannequin_UE4/Animations/WalkInCircle_Fwd
+MRUItem10=/Game/Characters/Mannequin_UE4/Animations/Walk_Fwd
+MRUItem11=/Game/Characters/Mannequin_UE4/Animations/Run_Fwd
+MRUItem12=/Game/Characters/Mannequin_UE4/Animations/Punch_Fwd
+MRUItem13=/Game/Characters/Mannequin_UE4/Animations/Kick_Fwd
+MRUItem14=/Game/Characters/Mannequin_UE4/Animations/Jump_Fwd
+MRUItem15=/Game/Characters/Mannequin_UE4/Animations/Idle_Fwd
+MRUItem16=/Game/Characters/Mannequin_UE4/Animations/Fall_Fwd
+MRUItem17=/Game/Characters/Mannequin_UE4/Animations/Death_Fwd
+MRUItem18=/Game/ThirdPerson/WBP/GameUI/InGameScreen
+MRUItem19=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
+MRUItem20=/Game/ThirdPerson/WBP/GameUI/Tutorial/WBP_Tutorial
+MRUItem21=/Game/ThirdPerson/WBP/GameUI/WBP_PauseMenu
+MRUItem22=/Game/ThirdPerson/WBP/GameUI/Tutorial/WBP_Tutorial_03
+MRUItem23=/Game/ThirdPerson/WBP/GameUI/Tutorial/WBP_Tutorial_02
+MRUItem24=/Game/ThirdPerson/WBP/GameUI/Tutorial/WBP_Tutorial_01
+MRUItem25=/Game/ThirdPerson/WBP/MainMenuUI/Maps/LVL_MainMenu
+MRUItem26=/Game/ThirdPerson/Niagara/NS_BlackHoleEyeFX_01
+MRUItem27=/Game/ThirdPerson/Blueprints/Abilities/AbilityPickUps/BP_InteractOttoPickUp
+MRUItem28=/Game/ThirdPerson/Niagara/NS_Tentacles
+MRUItem29=/Game/ThirdPerson/Niagara/NS_Tentacles_01
 
 [DetailCategories]
 InputMappingContext.Mappings=True
@@ -8121,6 +8129,18 @@ IKRetargeter.Source=True
 IKRetargeter.Target=True
 IKRetargeter.PreviewSettings=True
 IKRetargeter.DebugSettings=True
+ABP_Oceana_C.RootMotion=True
+ABP_Oceana_C.Notifies=True
+ABP_Oceana_C.Montage=True
+AnimGraphNode_Base.Functions=True
+AnimGraphNode_Base.Tag=True
+AnimGraphNode_BlendSpacePlayer.Sync=True
+AnimGraphNode_BlendSpacePlayer.Relevancy=True
+AnimGraphNode_BlendSpacePlayer.Functions=True
+AnimGraphNode_BlendSpacePlayer.Coordinates=True
+AnimGraphNode_BlendSpacePlayer.Tag=True
+AnimGraphNode_BlendSpacePlayer.Settings=True
+ABP_Oceana_C.Default=True
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPerson/Input/IMC_Default.IMC_Default=0
@@ -8404,14 +8424,16 @@ IKRetargeter.DebugSettings=True
 /Game/ThirdPerson/WBP/GameUI/Tutorial/WBP_Tutorial_01.WBP_Tutorial_01=1
 /Game/ThirdPerson/WBP/GameUI/Tutorial/WBP_Tutorial_02.WBP_Tutorial_02=1
 /Game/ThirdPerson/WBP/GameUI/Tutorial/WBP_Tutorial_03.WBP_Tutorial_03=1
-/Game/ThirdPerson/Oceana/Marmaid_Rig_PhysicsAsset.Marmaid_Rig_PhysicsAsset=1
+/Game/ThirdPerson/Oceana/Marmaid_Rig_PhysicsAsset.Marmaid_Rig_PhysicsAsset=0
 /Game/Characters/Mannequin_UE4/Animations/Walk_Fwd.Walk_Fwd=1
 /Game/Characters/Mannequin_UE4/Animations/WalkInCircle_Fwd.WalkInCircle_Fwd=1
 /Game/ThirdPerson/Oceana/Animations/Death_Fwd.Death_Fwd=1
-/Game/ThirdPerson/Oceana/RTG_Mannequin_Marmaid_Rig.RTG_Mannequin_Marmaid_Rig=1
+/Game/ThirdPerson/Oceana/RTG_Mannequin_Marmaid_Rig.RTG_Mannequin_Marmaid_Rig=0
 /Game/ThirdPerson/Oceana/Animations/BS_Oceana.BS_Oceana=1
 /Game/ThirdPerson/Oceana/Animations/BS_Locomotion.BS_Locomotion=1
-/Game/ThirdPerson/Oceana/Animations/BD_Locomotion.BD_Locomotion=1
+/Game/ThirdPerson/Oceana/Animations/BD_Locomotion.BD_Locomotion=0
+/Game/ThirdPerson/Oceana/Animations/ABP_Oceana.ABP_Oceana=0
+/Game/Characters/Mannequin_UE4/Animations/RunInPlace_Fwd.RunInPlace_Fwd=0
 
 [PluginBrowser]
 InstalledPlugins=MixamoAnimationRetargeting
@@ -8794,6 +8816,7 @@ Vector3f=
 NiagaraSystem=WaterBodyOcean.Collision.Collision,WidgetComponent.Materials.MaterialList,BP_ThirdPersonCharacter_C.Collision.Collision,BP_ConeEnemy_C.Physics.ConstraintsGroup,BP_ConeEnemy_C.Collision.Collision,BP_ConeBasicEnemy_C.Physics.ConstraintsGroup,BP_ShootingConeEnemy_C.Physics.ConstraintsGroup,BP_ShootingConeEnemy_Insane_C.Physics.ConstraintsGroup,BP_ShootingConeEnemy_Insane_C.TransformCommon.Transform,BP_RunaWaySpirit_C.Collision.Collision,BoxComponent.TransformCommon.Transform,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Materials.MaterialList,StaticMeshComponent.Collision.Collision,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.WeightedIndices,K2Node_VariableGet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.FootStepSFXArray,K2Node_VariableGet.DefaultValueCategory.PlayerHurtSoundArray,K2Node_VariableGet.DefaultValueCategory.PopSFXArray_0,K2Node_VariableGet.DefaultValueCategory.GrappleHitSFXArray,K2Node_VariableGet.DefaultValueCategory.AttackSpellSFXArray,K2Node_VariableGet.DefaultValueCategory.AttackSpellSFXArray_02,K2Node_VariableGet.DefaultValueCategory.SpawnSFXArray,K2Node_VariableGet.DefaultValueCategory.SpiritSFXArray,K2Node_VariableGet.DefaultValueCategory.SpiritPool,K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_VariableGet.DefaultValueCategory.ZonePool,K2Node_VariableGet.DefaultValueCategory.EnemyPool,K2Node_VariableSet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.ProjectileUpgradeStruct,K2Node_VariableSet.DefaultValueCategory.EnemyPool,K2Node_VariableSet.DefaultValueCategory.SpiritPool,K2Node_VariableSet.DefaultValueCategory.ZonePool,K2Node_CustomEvent.Inputs.1C11B20F45A6C7019D54588BC1BCEAF6,K2Node_FunctionEntry.Inputs.29EB62D145C5A2A6E42E2C878468CB1B,PropertyWrapper.DefaultValueCategory.UpgradeScreensArray,PropertyWrapper.DefaultValueCategory.ProjectileUpgradeStruct,PropertyWrapper.DefaultValueCategory.PopSFXArray_0,PropertyWrapper.DefaultValueCategory.EnemyPool,PropertyWrapper.DefaultValueCategory.GrappleHitSFXArray,PropertyWrapper.DefaultValueCategory.AttackSpellSFXArray,PropertyWrapper.DefaultValueCategory.AttackSpellSFXArray_02,PropertyWrapper.DefaultValueCategory.SpawnSFXArray,PropertyWrapper.DefaultValueCategory.ZonePool,PostProcessComponent.PostProcessVolume.Lens,CapsuleComponent.Collision.Collision,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Android,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_IOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Linux,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_LinuxArm64,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Mac,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_TVOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Windows,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.UseHealthPickUps,InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.CursorX_R,InputSettings.Bindings.AxisMappings.CursorY_D,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_LinuxArm64,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_TVOS,InputSettings.Platforms.InputPlatformSettings_Windows,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice,GameMapsSettings.DefaultModes.SelectedGameModeDetails
 WBP_Tutorial_C=WaterBodyOcean.Collision.Collision,WidgetComponent.Materials.MaterialList,BP_ThirdPersonCharacter_C.Collision.Collision,BP_ConeEnemy_C.Physics.ConstraintsGroup,BP_ConeEnemy_C.Collision.Collision,BP_ConeBasicEnemy_C.Physics.ConstraintsGroup,BP_ShootingConeEnemy_C.Physics.ConstraintsGroup,BP_ShootingConeEnemy_Insane_C.Physics.ConstraintsGroup,BP_ShootingConeEnemy_Insane_C.TransformCommon.Transform,BP_RunaWaySpirit_C.Collision.Collision,BoxComponent.TransformCommon.Transform,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Materials.MaterialList,StaticMeshComponent.Collision.Collision,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.WeightedIndices,K2Node_VariableGet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.FootStepSFXArray,K2Node_VariableGet.DefaultValueCategory.PlayerHurtSoundArray,K2Node_VariableGet.DefaultValueCategory.PopSFXArray_0,K2Node_VariableGet.DefaultValueCategory.GrappleHitSFXArray,K2Node_VariableGet.DefaultValueCategory.AttackSpellSFXArray,K2Node_VariableGet.DefaultValueCategory.AttackSpellSFXArray_02,K2Node_VariableGet.DefaultValueCategory.SpawnSFXArray,K2Node_VariableGet.DefaultValueCategory.SpiritSFXArray,K2Node_VariableGet.DefaultValueCategory.SpiritPool,K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_VariableGet.DefaultValueCategory.ZonePool,K2Node_VariableGet.DefaultValueCategory.EnemyPool,K2Node_VariableSet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.ProjectileUpgradeStruct,K2Node_VariableSet.DefaultValueCategory.EnemyPool,K2Node_VariableSet.DefaultValueCategory.SpiritPool,K2Node_VariableSet.DefaultValueCategory.ZonePool,K2Node_CustomEvent.Inputs.1C11B20F45A6C7019D54588BC1BCEAF6,K2Node_FunctionEntry.Inputs.29EB62D145C5A2A6E42E2C878468CB1B,PropertyWrapper.DefaultValueCategory.UpgradeScreensArray,PropertyWrapper.DefaultValueCategory.ProjectileUpgradeStruct,PropertyWrapper.DefaultValueCategory.PopSFXArray_0,PropertyWrapper.DefaultValueCategory.EnemyPool,PropertyWrapper.DefaultValueCategory.GrappleHitSFXArray,PropertyWrapper.DefaultValueCategory.AttackSpellSFXArray,PropertyWrapper.DefaultValueCategory.AttackSpellSFXArray_02,PropertyWrapper.DefaultValueCategory.SpawnSFXArray,PropertyWrapper.DefaultValueCategory.ZonePool,PostProcessComponent.PostProcessVolume.Lens,CapsuleComponent.Collision.Collision,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Android,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_IOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Linux,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_LinuxArm64,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Mac,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_TVOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Windows,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.UseHealthPickUps,InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.CursorX_R,InputSettings.Bindings.AxisMappings.CursorY_D,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_LinuxArm64,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_TVOS,InputSettings.Platforms.InputPlatformSettings_Windows,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice,GameMapsSettings.DefaultModes.SelectedGameModeDetails
 BlendSpace1D=BlendSpace1D.Axis Settings.Horizontal Axis,BlendSpace1D.BlendSamples.BlendSamples_Samples
+ABP_Oceana_C=
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
